--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -297,6 +297,12 @@
     <Compile Include="view\PublicHealthView\deleteStartMaternalHealthServices.Designer.cs">
       <DependentUpon>deleteStartMaternalHealthServices.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\PublicHealthView\deleteToChildHealthServices.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\deleteToChildHealthServices.Designer.cs">
+      <DependentUpon>deleteToChildHealthServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\PublicHealthView\detaTotuberculosisPatientServices.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -789,6 +795,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\deleteStartMaternalHealthServices.resx">
       <DependentUpon>deleteStartMaternalHealthServices.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\deleteToChildHealthServices.resx">
+      <DependentUpon>deleteToChildHealthServices.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\detaTotuberculosisPatientServices.resx">
       <DependentUpon>detaTotuberculosisPatientServices.cs</DependentUpon>
