--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -1069,6 +1069,9 @@
     <None Include="up\template\个人信息.doc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="up\template\个人信息档案.doc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="up\template\中医体质.doc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
