--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -1224,6 +1224,9 @@
     <Content Include="images\update.png" />
     <Content Include="images\xzwj.png" />
     <Content Include="images\身份证样图.png" />
+    <Content Include="up\pic\371327198003045712.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="up\template\B超.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
