--- a/zkhwClient/App.config
+++ b/zkhwClient/App.config
@@ -5,11 +5,11 @@
             <section name="zkhwClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <startup> 
+    <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
 	<connectionStrings>
-		<add name="MySql_Connection" connectionString="database=zkhwClient;Password=zkhw123;User ID=zkhw;server=192.168.1.5;port=3307;character set=utf8"/>
+		<add name="MySql_Connection" connectionString="database=zkhwClientTo;Password=zkhw123;User ID=zkhw;server=47.92.74.93;port=3307;character set=utf8;Allow User Variables=True"/>
     <add name="MySql_ConnectionYpt" connectionString="database=zkhw;Password=zkhw123;User ID=zkhw;server=47.92.74.93;port=3307;character set=utf8"/>
 	</connectionStrings>
  <userSettings>
