--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -1264,6 +1264,7 @@
     <Content Include="images\check.png" />
     <Content Include="images\clear.png" />
     <Content Include="images\close.png" />
+    <Content Include="images\csh.png" />
     <Content Include="images\delete.png" />
     <Content Include="images\dqjl.png" />
     <Content Include="images\fanhui.png" />
