--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -1125,6 +1125,9 @@
     <EmbeddedResource Include="view\UseHelpView\bloodAnalysis.resx">
       <DependentUpon>bloodAnalysis.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="view\UseHelpView\softwareSystems.resx">
+      <DependentUpon>softwareSystems.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="bin\Debug\Huazhan.exe.config" />
     <None Include="bin\Debug\Huazhan.vshost.exe.config" />
     <None Include="bin\Debug\Huazhan.vshost.exe.manifest" />
