--- a/zkhwClient/App.config
+++ b/zkhwClient/App.config
@@ -9,8 +9,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
 	<connectionStrings>
-		<add name="MySql_Connection" connectionString="database=zkhwdf;Password=zkhw123;User ID=zkhw;server=127.0.0.1;port=3307;character set=utf8;Allow User Variables=True"/>
-    <add name="MySql_ConnectionYpt" connectionString="database=zkhwcopy;Password=zkhw123;User ID=zkhw;server=47.92.74.93;port=3307;character set=utf8"/>
+		<add name="MySql_Connection" connectionString="database=testtest;Password=zkhw123;User ID=zkhw;server=127.0.0.1;port=3307;character set=utf8;Allow User Variables=True"/>
+    <add name="MySql_ConnectionYpt" connectionString="database=zkhw;Password=zkhw123;User ID=zkhw;server=47.92.74.93;port=3307;character set=utf8"/>
 	</connectionStrings>
  <userSettings>
   <zkhwClient.Properties.Settings>
