--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -233,6 +233,12 @@
     <Compile Include="frmMain1.Designer.cs">
       <DependentUpon>frmMain1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmMainm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMainm.Designer.cs">
+      <DependentUpon>frmMainm.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMainn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -248,6 +254,12 @@
     <Compile Include="LoadingHelper.cs" />
     <Compile Include="MyEncrypt.cs" />
     <Compile Include="OSSClientHelper.cs" />
+    <Compile Include="view\PublicHealthView\personRegistt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\personRegistt.Designer.cs">
+      <DependentUpon>personRegistt.cs</DependentUpon>
+    </Compile>
     <Compile Include="service\PublicHealthService\olderHelthServices.cs" />
     <Compile Include="service\PublicHealthService\diabetesPatientService.cs" />
     <Compile Include="service\PublicHealthService\hypertensionPatientService.cs" />
@@ -873,11 +885,17 @@
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmMainm.resx">
+      <DependentUpon>frmMainm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMainn.resx">
       <DependentUpon>frmMainn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoaderForm.resx">
       <DependentUpon>LoaderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\personRegistt.resx">
+      <DependentUpon>personRegistt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\HomeDoctorSigningView\FormJY.resx">
       <DependentUpon>FormJY.cs</DependentUpon>
@@ -1331,11 +1349,16 @@
     <Content Include="images\身份证样图.png" />
     <None Include="Resources\拉取数据.png" />
     <Content Include="img\bbdc.png" />
+    <None Include="img\djr.png" />
+    <Content Include="img\cz.png" />
+    <Content Include="img\d.png" />
     <Content Include="img\gj.png" />
+    <None Include="img\jddw.png" />
     <Content Include="img\jkfp.png" />
     <Content Include="img\jyqy.png" />
     <Content Include="img\lnr.png" />
     <Content Include="img\log.ico" />
+    <None Include="img\rightbottom.png" />
     <Content Include="img\rydj.png" />
     <Content Include="img\sfxt.png" />
     <Content Include="img\sybz.png" />
@@ -1343,6 +1366,7 @@
     <Content Include="img\tjjd.png" />
     <Content Include="img\topleft.png" />
     <Content Include="img\xtsz.png" />
+    <None Include="img\ys.png" />
     <Content Include="up\pic\371327198003045712.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
