--- a/zkhwClient/zkhwClient.csproj
+++ b/zkhwClient/zkhwClient.csproj
@@ -248,6 +248,12 @@
     <Compile Include="LoadingHelper.cs" />
     <Compile Include="MyEncrypt.cs" />
     <Compile Include="OSSClientHelper.cs" />
+    <Compile Include="view\PublicHealthView\aUPersonalBasicInfoo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\PublicHealthView\aUPersonalBasicInfoo.Designer.cs">
+      <DependentUpon>aUPersonalBasicInfoo.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\PublicHealthView\personRegistt.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -884,6 +890,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoaderForm.resx">
       <DependentUpon>LoaderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\PublicHealthView\aUPersonalBasicInfoo.resx">
+      <DependentUpon>aUPersonalBasicInfoo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\PublicHealthView\personRegistt.resx">
       <DependentUpon>personRegistt.cs</DependentUpon>
